# simple-cpp-calculator

./: CMakeLists.txt  LICENSE  README.md
include/: calculator.h
src/: calculator.cpp  main.cpp
test/: test_calculator.cpp
